/*
 * $Id: ChangeLog,v 1.213 2006-09-03 12:39:32 declan2005 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-09-03 07:36 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * include/oohg.ch
    * added common.ch in order to compile sucefully DEFAULT x TO Y

2006-09-02 21:04 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_grid.prg
    ! Fixed This.CellValue assignment.
  * source/h_textbox.prg
    * Don't move cursor to mouse's click position when masked textbox
      got focus via mouse click.
  * include/i_progressmeter.ch
    * Included missing HELPID and INVISIBLE clauses.
  * source/h_windows.prg
    * Few default values.

2006-08-27 12:45 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_menu.prg
    * Allows to send control's object and control's name for a
      control's context menu.
    * Changed some control's type definition ("CONTEXT" -> "MENU",
      "DROPDOWN" -> "MENU", "MENUITEM" added).
  * source/h_statusbar.prg
    * Statusbar's size is taken from window's size instead of own size.
  * source/h_windows.prg
    * Fixed for ThisWindow implementation for ON KEY command.

2006-08-26 11:43 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
    * minor changes

2006-08-25 08:58 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_browse.prg
    * Fixed record repositioning when scrollbar is moved top or bottom.

2006-08-22 22:37 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_xbrowse.prg
    * Moved ::OnAppend codeblock evaluation after fields' update.

2006-08-22 22:24 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_print.prg
    * Removed warnings.
    * Fixed first page name assignment for TExcelPrint.

2006-08-21 14:36 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
  * source/h_report.prg