@@ -1,5 +1,5 @@
 /*
- * $Id: i_textbox.ch,v 1.9 2006-06-06 02:59:34 guerra000 Exp $
+ * $Id: i_textbox.ch,v 1.10 2006-09-11 02:22:18 guerra000 Exp $
  */
 /*
  * ooHG source code:
@@ -128,6 +128,7 @@
                         [ <noborder: NOBORDER> ]        ;
                         [ FOCUSEDPOS <focusedpos> ]     ;
                         [ SUBCLASS <subclass> ]         ;
+                        [ <disabled: DISABLED> ]        ;
          =>;
         [ <obj> := ] _OOHG_SelectSubClass( iif( <.numeric.>, TTextNum(), TText() ), [ <subclass>() ] ): ;
                         Define( <(name)>, <(parent)>, <col>, <row>, <width>, <height>, <value>, ;
@@ -137,7 +138,7 @@
                         <.RightAlign.>, <helpid>, <.readonly.> ,<.bold.>, ;
                         <.italic.>, <.underline.>, <.strikeout.> , <(field)> , ;
                         <backcolor> , <fontcolor> , <.invisible.> , <.notabstop.> , ;
-                        <.rtl.>, <.autoskip.>, <.noborder.>, <focusedpos> )
+                        <.rtl.>, <.autoskip.>, <.noborder.>, <focusedpos>, <.disabled.> )
 
 
 // TEXTBOX ( NUMERIC INPUTMASK )
@@ -175,6 +176,7 @@
                 [ <noborder: NOBORDER> ]        ;
                 [ FOCUSEDPOS <focusedpos> ]     ;
                 [ SUBCLASS <subclass> ]         ;
+                [ <disabled: DISABLED> ]        ;
 	=>;
         [ <obj> := ] _OOHG_SelectSubClass( TTextMasked(), [ <subclass>() ] ): ;
                         Define( <(name)>, <(parent)>, <col>, <row>, <inputmask> , ;
@@ -184,7 +186,7 @@
                         <.italic.>, <.underline.>, <.strikeout.>  , <(field)>  , ;
                         <backcolor> , <fontcolor> , <.readonly.> , <.invisible.> , ;
                         <.notabstop.> , <.rtl.> , <.autoskip.>, <.noborder.> , ;
-                        <focusedpos> )
+                        <focusedpos>, <.disabled.> )
 
 // TEXTBOX ( CHARACTER INPUTMASK )
 
@@ -219,6 +221,7 @@
                 [ <noborder: NOBORDER> ]        ;
                 [ FOCUSEDPOS <focusedpos> ]     ;
                 [ SUBCLASS <subclass> ]         ;
+                [ <disabled: DISABLED> ]        ;
 	=>;
         [ <obj> := ] _OOHG_SelectSubClass( TTextCharMask(), [ <subclass>() ] ): ;
                         Define( <(name)>, <(parent)>, <col>, <row>, <inputmask> , ;
@@ -228,7 +231,7 @@
                         <.underline.>, <.strikeout.> , <(field)> , <backcolor> , ;
                         <fontcolor> , .f. , <.readonly.> , <.invisible.> , ;
                         <.notabstop.> , <.rtl.> , <.autoskip.>, <.noborder.> , ;
-                        <focusedpos> )
+                        <focusedpos>, <.disabled.> )
 
 // TEXTBOX ( DATE TYPE )
 
@@ -263,6 +266,7 @@
                 [ <noborder: NOBORDER> ]        ;
                 [ FOCUSEDPOS <focusedpos> ]     ;
                 [ SUBCLASS <subclass> ]         ;
+                [ <disabled: DISABLED> ]        ;
 	=>;
         [ <obj> := ] _OOHG_SelectSubClass( TTextCharMask(), [ <subclass>() ] ): ;
                         Define( <(name)>, <(parent)>, <col>, <row>, "" , <w> , ;
@@ -271,7 +275,7 @@
                         <helpid> , <.bold.>, <.italic.>, <.underline.>, <.strikeout.> , ;
                         <(field)> , <backcolor> , <fontcolor> , <.date.> , <.readonly.> , ;
                         <.invisible.> , <.notabstop.> , <.rtl.> , <.autoskip.>, <.noborder.> , ;
-                        <focusedpos> )
+                        <focusedpos>, <.disabled.> )
 
 // TEXTBOX ( PICTURE MASK )
 
@@ -306,6 +310,7 @@
                 [ <noborder: NOBORDER> ]        ;
                 [ FOCUSEDPOS <focusedpos> ]     ;
                 [ SUBCLASS <subclass> ]         ;
+                [ <disabled: DISABLED> ]        ;
 	=>;
         [ <obj> := ] _OOHG_SelectSubClass( TTextPicture(), [ <subclass>() ] ): ;
                         Define( <(name)>, <(parent)>, <col>, <row>, <w> , <height> , ;
@@ -314,4 +319,4 @@
                         <.RightAlign.> , <helpid> , <.readonly.> , <.bold.> , <.italic.> , ;
                         <.underline.> , <.strikeout.> , <(field)> , <backcolor> , ;
                         <fontcolor> , <.invisible.> , <.notabstop.> , <.rtl.> , <.autoskip.>, ;
-                        <.noborder.> , <focusedpos> )
+                        <.noborder.> , <focusedpos>, <.disabled.> )
