@@ -1,11 +1,21 @@
 /*
- * $Id: ChangeLog,v 1.213 2006-09-03 12:39:32 declan2005 Exp $
+ * $Id: ChangeLog,v 1.214 2006-09-11 02:22:18 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-09-10 21:24 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
+  * source/c_windows.c
+    * Unified SetWindowStyleFlag() and GetWindowStyleFlag() to
+      WindowStyleFlag() single function.
+  * source/h_label.prg
+    * ::Align property approachs WindowStyleFlag() function.
+  * include/i_textbox.ch
+  * source/h_textbox.prg
+    * DISABLED clause added ( @...TEXTBOX...DISABLED ).
 
 2006-09-03 07:36 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
   * include/oohg.ch
